# adaptive_professor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
features/: a2ui_streaming.feature  hello_world.feature  interactive_learning.feature  lecture_session.feature
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.test.tsx  page.tsx
frontend/src/components/: CodeExecutor.tsx  ConceptMap.tsx  ConnectionStatus.test.tsx  ConnectionStatus.tsx  MarkdownContent.tsx
frontend/src/lib/: a2ui-renderer.test.tsx  a2ui-renderer.tsx  a2ui-types.ts  api.ts
src/: __init__.py  a2ui_adapter.py  a2ui_core.py  config.py  database.py  llm.py  main.py  session.py  url_validator.py
src/agent/: __init__.py
src/components/: __init__.py  slides.py
tests/: __init__.py  conftest.py  test_a2ui_compliance.py  test_health.py  test_lecture.py  test_session.py  test_url_validator.py
tests/bdd/: __init__.py  test_hello_world.py  test_lecture_session.py
